Spinner css issue on mobile

--- a/src/app/components/loading-spinner/loading-spinner.component.scss
+++ b/src/app/components/loading-spinner/loading-spinner.component.scss
@@ -5,6 +5,11 @@
     height: 80px;
     left: 48%;
   }
+@media only screen and (max-width: 600px) {
+  .lds-spinner {
+    left: 37%;
+  }
+}
   .lds-spinner div {
     transform-origin: 40px 40px;
     animation: lds-spinner 1.2s linear infinite;
